--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=FightingGameDemo
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+EditorStartupMap=/Game/Maps/Level1.Level1
 GameDefaultMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 TransitionMap=
 bUseSplitscreen=True
