--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -146,6 +146,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="PlayerCrouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=S)
 +ActionMappings=(ActionName="PlayerPunch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=H)
 +ActionMappings=(ActionName="PlayerPunch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Left)
++ActionMappings=(ActionName="PlayerKick",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Y)
++ActionMappings=(ActionName="PlayerKick",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
