disabled splitscreen camera and currently skips gamepad for p1

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,11 +5,12 @@ GameName=FightingGameDemo
 EditorStartupMap=/Game/Maps/Level1.Level1
 GameDefaultMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 TransitionMap=
-bUseSplitscreen=True
+bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode_C
 GlobalDefaultServerGameMode=None
+bOffsetPlayerGamepadIds=True
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_12
